# tsalign

./: Cargo.toml  README.md
.github/workflows/: python.yml
generic_a_star/: Cargo.toml
lib_ts_chainalign/: Cargo.toml
lib_ts_chainalign/src/: chain_align.rs  chaining_cost_function.rs  costs.rs
lib_ts_chainalign/src/alignment/: ts_kind.rs
lib_ts_chainalign/src/chaining_cost_function/: tests.rs
lib_ts_chainalign/src/chaining_lower_bounds/: ts_jump.rs
lib_ts_chainalign/src/costs/: compat.rs
lib_tsalign/: Cargo.toml
lib_tsalign/src/: a_star_aligner.rs  config.rs  error.rs  tests.rs
lib_tsalign/src/a_star_aligner/: alignment_geometry.rs  alignment_result.rs  configurable_a_star_align.rs  gap_affine_edit_distance.rs  template_switch_distance.rs
lib_tsalign/src/config/: io.rs
lib_tsshow/: Cargo.toml
lib_tsshow/src/: error.rs  plain_text.rs  svg.rs  ts_arrangement.rs
lib_tsshow/src/plain_text/: mutlipair_alignment_renderer.rs  parse_template_switches.rs
lib_tsshow/src/ts_arrangement/: complement.rs  index_types.rs  inner.rs  source.rs  template_switch.rs
python_bindings/: BUILD.md  Cargo.toml  README.md
python_bindings/src/: lib.rs
sample_tsa_config/: config.tsa
seed_chain/: Cargo.toml
test_files/: LINC01349_20.fa  LINC01349_20.sh  chr11_39595337_39595347.fa  chr11_39595337_39595347.sh  chr15_52720987_52721016.sh  twin_both_descendants.fa  twin_intra_forward_jump.fa  twin_variable_length_ts.fa
tsalign/: Cargo.toml
tsalign-tests/: Cargo.toml
tsalign/src/: align.rs  show.rs
tsalign/src/align/: template_switch_distance_type_selectors.rs
(+26 files in other folders)
